@@ -612,45 +612,32 @@ Return the result of the last hook"
 
 
 
-(defun default-group-nw-hook (window)
-  (when (xlib:window-p *current-child*)
-    (leave-group)
-    (select-previous-level))
-  ;;(unless (eql (window-type window) :maxsize) ;; PHIL: this is sufficient for the ROX panel
-  (when (group-p *current-child*)
-    (pushnew window (group-child *current-child*))) ;)
-  ;;(dbg (xlib:wm-name window) (xlib:get-wm-class window) (window-type window)) ;;; PHIL
-  (case (window-type window)
-    (:normal (adapt-child-to-father window *current-child*))
-    (t (place-window-from-hints window))))
-
-
-(defun open-in-new-group-nw-hook (group window)
-  (declare (ignore group))
-  (pushnew window (group-child *current-root*))
-  ;;(dbg (xlib:wm-name window) (xlib:get-wm-class window) (window-type window)) ;;; PHIL
-  (case (window-type window)
-    (:normal (adapt-child-to-father window *current-root*))
-    (t (place-window-from-hints window)))
-  (list t nil))
-  
-
+;;(defun do-all-groups-nw-hook (window)
+;;  "Call nw-hook of each group. A hook must return one value or a list of two values.
+;;If the value or the first value is true then the default nw-hook is not executed.
+;;If the second value is true then no more group can do an action with the window (ie leave the loop)."
+;;  (let ((result nil))
+;;    (with-all-groups (*root-group* group)
+;;      (let ((ret (call-hook (group-nw-hook group) (list group window))))
+;;	(typecase ret
+;;	  (cons (when (first ret)
+;;		  (setf result t))
+;;		(when (second ret)
+;;		  (return-from do-all-groups-nw-hook result)))
+;;	  (t (when ret
+;;	       (setf result t))))))
+;;    result))
 
 (defun do-all-groups-nw-hook (window)
-  "Call nw-hook of each group. A hook must return one value or a list of two values.
-If the value or the first value is true then the default nw-hook is not executed.
-If the second value is true then no more group can do an action with the window (ie leave the loop)."
-  (let ((result nil))
+  "Call nw-hook of each group."
+  (let ((found nil))
     (with-all-groups (*root-group* group)
-      (let ((ret (call-hook (group-nw-hook group) (list group window))))
-	(typecase ret
-	  (cons (when (first ret)
-		  (setf result t))
-		(when (second ret)
-		  (return-from do-all-groups-nw-hook result)))
-	  (t (when ret
-	       (setf result t))))))
-    result))
+      (awhen (group-nw-hook group)
+	(call-hook it (list group window))
+	(setf found t)))
+    found))
+
+
 
 (defun process-new-window (window)
   "When a new window is created (or when we are scanning initial
@@ -668,7 +655,7 @@ managed."
 ;;    (when (group-p *current-child*) ;; PHIL: Remove this!!!
 ;;      (setf (group-nw-hook *current-child*) #'open-in-new-group-nw-hook))
     (unless (do-all-groups-nw-hook window)
-      (default-group-nw-hook window))
+      (default-group-nw-hook nil window))
     (unhide-window window)
     (netwm-add-in-client-list window)))
 
